# Rusty_CryptoAuthLib

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
convertto-proc-macro/: Cargo.toml
convertto-proc-macro/.cargo/: config.toml
convertto-proc-macro/examples/: test_macro.rs
convertto-proc-macro/src/: lib.rs
examples/: atcab_genkey.rs  atcab_info.rs  atcab_lock_config_zone_crc.rs  atcab_read_config_zone.rs  atcab_sha.rs  atcab_sign_and_verify.rs  atcab_write_config_zone.rs  atecc608a.rs  blinky.rs
i2c_logic_captures/: full_read_cmd_successful_capture.logicdata  info_response.logicdata  sha_cmd_4byte_success_capture.logicdata  sha_full_capture_success.logicdata
src/: constants.rs  lib.rs  macros.rs  packet.rs
