[package]
name = "Rusty_CryptoAuthLib"
version = "0.1.1"
authors = ["Nihal Pasham <nihal.pasham@gmail.com>"]
repository = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
license = "MIT OR Apache-2.0"
description = "A platform agnostic (minimal) I2C driver for Microchip's Crypto Authentication HW (i.e. secure element `ATECC608A`), written in pure Rust."
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["ATECC608A", "Microchip-driver", "Security", "Crypto", "Authentication"]
homepage = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
documentation = "https://docs.rs/Rusty_CryptoAuthLib"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52840-hal = "0.10.0"
panic-halt  = "0.2.0"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.4"
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
postcard = "0.5.0"
heapless = "0.5.5"

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]

[profile.release]
debug = true

[patch.crates-io]
nrf-hal-common = {version = "0.10.0", path = '/Users/Nil/devspace/rust/projects/rustscratchspace/nrf-hal/nrf-hal-common' }


