[package]
authors = ["Nihal Pasham <nihal.pasham@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic I2C driver for Microchip's Crypto Authentication HW (i.e. secure element `ATECC608A`), written in pure Rust."
documentation = "https://docs.rs/Rusty_CryptoAuthLib"
edition = "2018"
homepage = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
keywords = ["ATECC608A", "Microchip-driver", "Security", "Crypto", "Authentication"]
license = "MIT OR Apache-2.0"
name = "Rusty_CryptoAuthLib"
readme = "README.md"
repository = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
heapless = "0.5.5"
nb = "0.1.2"
postcard = "0.5.0"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.114"

[features]
default = ["rt"]
rt = ["nrf52840-hal/rt"]

[profile.release]
debug = true

[patch.crates-io]
nrf-hal-common = {version = "0.10.0", path = '/Users/Nil/devspace/rust/projects/rustscratchspace/nrf-hal/nrf-hal-common'}

[dev-dependencies]
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
nrf52840-hal = "0.10.0"
nrf52840-mdk = {git = "https://github.com/nihalpasham/nrf52840-mdk-rs"}
panic-halt = "0.2.0"
